--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <div id="description">
       <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
         Separoは<a href="https://github.com/gfngfn">@gfngfn</a>氏が考案した2人対戦ボードゲームです。
-        ルールはページ下部を参照してください。
+        ルールはページ下部の簡易的な記述か、<a href="http://buddhagaja.soregashi.com/boardgame.html#jump_boardgame_separo">@gfngfn氏のサイト</a>を参照してください。
+      </p>
+      <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
+        ゲームを始める際は、下のプルダウンメニューからアルゴリズム（か、Human）を選んでStartを押してください。
+        各アルゴリズムについては、<a href="https://github.com/ToruNiina/separo-rs">GitHubレポジトリ</a>を参照してください。
       </p>
     </div>
 
@@ -49,6 +53,11 @@
         第二フェーズで選んだ点にすでに自分の石がある場合、接続できます。
         全てのフェーズで、すでにある自分の根と45度以下の角度で交わるような根は伸ばすことができません。
         手がない場合、パスができます。両者ともに着手不可能になれば終了です。
+      </p>
+      <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
+        遊ぶときは、第一フェーズで選んだ石をクリックし、ドラッグして続きの石を選択してください。
+        ボタンを離した瞬間にいたグリッドの石が第二フェーズの石となります。
+        ルール違反な手は適用されません。間違えてクリックした場合は遠く離れたところでボタンを離すなどで違反な手を作り、キャンセルしてください。
       </p>
     </div>
     <script type="text/javascript" src="index.js"></script>
