:pencil: change wording a bit

--- a/static/index.html
+++ b/static/index.html
@@ -55,9 +55,9 @@
         手がない場合、パスができます。両者ともに着手不可能になれば終了です。
       </p>
       <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
-        遊ぶときは、第一フェーズで選んだ石をクリックし、ドラッグして続きの石を選択してください。
-        ボタンを離した瞬間にいたグリッドの石が第二フェーズの石となります。
-        ルール違反な手は適用されません。間違えてクリックした場合は遠く離れたところでボタンを離すなどで違反な手を作り、キャンセルしてください。
+        遊ぶときは、第一フェーズを始める石をクリックし、ドラッグして続きの石を選択してください。
+        ボタンを離した瞬間にいたグリッドの石が第二フェーズ終わりの石となります。
+        ルール違反となる手は適用されません。間違えてクリックした場合は遠く離れたところでボタンを離すなどでルール違反の手を作り、キャンセルしてください。
       </p>
     </div>
     <script type="text/javascript" src="index.js"></script>
