--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <input type="button" value="start" id="start-button">
     </div>
 
+    <div style="text-align:center;">
+        <label for="guide"> guide on </label>
+        <input type="checkbox" name="guide" id="guide" checked>
+    </div>
+
     <div id="game" style="text-align: center;">
       <canvas id="separo-board"></canvas>
     </div>
