--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     <div style="text-align:center;">
         <label for="guide"> guide on </label>
         <input type="checkbox" name="guide" id="guide" checked>
+
+        <label for="time-limit"> time limit (sec) </label>
+        <input type="number" name="time-limit" id="time-limit" value="1" min="1" max="60">
+
+        <label for="board-size"> board size </label>
+        <input type="number" name="board-size" id="board-size" value="9" min="5" max="19">
     </div>
 
     <div id="game" style="text-align: center;">
