--- a/static/index.html
+++ b/static/index.html
@@ -69,7 +69,8 @@
       <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
         遊ぶときは、第一フェーズを始める石をクリックし、ドラッグして続きの石を選択してください。
         ボタンを離した瞬間にいたグリッドの石が第二フェーズ終わりの石となります。
-        ルール違反となる手は適用されません。間違えてクリックした場合は遠く離れたところでボタンを離すなどでルール違反の手を作り、キャンセルしてください。
+        スマホやタブレットの場合は、第一フェーズを始める石をタップしてから、第二フェーズの支点と終点の石をタップしてください。
+        ルール違反となる手は適用されません。間違えて選択した場合は遠く離れたところでボタンを離すなどでルール違反の手を作り、キャンセルしてください。
       </p>
     </div>
     <script type="text/javascript" src="./js/index.js"></script>
