--- a/static/index.html
+++ b/static/index.html
@@ -6,74 +6,79 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Separo-rs</title>
     <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.4/mobile-detect.min.js"></script>
+    <style>
+      p { text-indent: 1em; }
+    </style>
   </head>
   <body>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <div id="description">
-      <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
-        Separoは<a href="https://github.com/gfngfn">@gfngfn</a>氏が考案した2人対戦ボードゲームです。
-        ルールはページ下部の簡易的な記述か、<a href="http://buddhagaja.soregashi.com/boardgame.html#jump_boardgame_separo">@gfngfn氏のサイト</a>を参照してください。
-      </p>
-      <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
-        ゲームを始める際は、下のプルダウンメニューからアルゴリズム（か、Human）を選んでStartを押してください。
-        各アルゴリズムについては、<a href="https://github.com/ToruNiina/separo-rs">GitHubレポジトリ</a>を参照してください。
-      </p>
-    </div>
+    <div class="container">
+      <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+      <div id="description">
+        <p align="justify">
+          Separoは<a href="https://github.com/gfngfn">@gfngfn</a>氏が考案した2人対戦ボードゲームです。
+          ルールはページ下部の簡易的な記述か、<a href="http://buddhagaja.soregashi.com/boardgame.html#jump_boardgame_separo">@gfngfn氏のサイト</a>を参照してください。
+        </p>
+        <p align="justify">
+          ゲームを始める際は、下のプルダウンメニューからアルゴリズム（か、Human）を選んでStartを押してください。
+          各アルゴリズムについては、<a href="https://github.com/ToruNiina/separo-rs">GitHubレポジトリ</a>を参照してください。
+        </p>
+      </div>
 
-    <div id="player-select" style="text-align:center;">
-        <select id="red player">
-            <option value="NotSelected">-- RED --</option>
-            <option value="Human">Human</option>
-            <option value="Random">Random</option>
-            <option value="Naive MC">Naive MC</option>
-            <option value="UCT MC">UCT MC</option>
-        </select>
-        <select id="blue player">
-            <option value="NotSelected">-- BLUE --</option>
-            <option value="Human">Human</option>
-            <option value="Random">Random</option>
-            <option value="Naive MC">Naive MC</option>
-            <option value="UCT MC">UCT MC</option>
-        </select>
-    </div>
+      <div id="player-select" style="text-align:center;">
+          <select id="red player">
+              <option value="NotSelected">-- RED --</option>
+              <option value="Human">Human</option>
+              <option value="Random">Random</option>
+              <option value="Naive MC">Naive MC</option>
+              <option value="UCT MC">UCT MC</option>
+          </select>
+          <select id="blue player">
+              <option value="NotSelected">-- BLUE --</option>
+              <option value="Human">Human</option>
+              <option value="Random">Random</option>
+              <option value="Naive MC">Naive MC</option>
+              <option value="UCT MC">UCT MC</option>
+          </select>
+      </div>
 
-    <div style="text-align:center;">
-        <input type="button" value="start" id="start-button">
-    </div>
+      <div style="text-align:center;">
+          <input type="button" value="start" id="start-button">
+      </div>
 
-    <div style="text-align:center;">
-        <label for="guide"> guide on </label>
-        <input type="checkbox" name="guide" id="guide" checked>
+      <div style="text-align:center;">
+          <label for="guide"> guide on </label>
+          <input type="checkbox" name="guide" id="guide" checked>
 
-        <label for="time-limit"> time limit (sec) </label>
-        <input type="number" name="time-limit" id="time-limit" value="1" min="1" max="60">
+          <label for="time-limit"> time limit (sec) </label>
+          <input type="number" name="time-limit" id="time-limit" value="1" min="1" max="60">
 
-        <label for="board-size"> board size </label>
-        <input type="number" name="board-size" id="board-size" value="9" min="5" max="19">
-    </div>
+          <label for="board-size"> board size </label>
+          <input type="number" name="board-size" id="board-size" value="9" min="5" max="19">
+      </div>
 
-    <div id="game" style="text-align: center;">
-      <canvas id="separo-board"></canvas>
-    </div>
-    <div id="rule">
-      <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
-        このゲームは、赤が先手、青が後手となり、順に「石」を置きながら「根」を張って、最終的に盤面をより多くの領域に分割した方が勝ちとなるゲームです。
-        ただし、分割された領域のうち、面積が格子の単位正方形1つ分以下となる領域はカウントされません。
-      </p>
-      <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
-        手番は二つのフェーズから成ります。
-        第一フェーズでは、すでにある自分の石を選び、そこから斜めの方向にあるまだ石のない交点を選んで根を伸ばします。
-        第二フェーズでは、第一フェーズで置いた点から、第一フェーズで伸ばした線と135度の角度をなす縦横いずれかの線を選び、根を伸ばします。
-        第二フェーズで選んだ点にすでに自分の石がある場合、接続できます。
-        全てのフェーズで、すでにある自分の根と45度以下の角度で交わるような根は伸ばすことができません。
-        手がない場合、パスができます。両者ともに着手不可能になれば終了です。
-      </p>
-      <p align="justify" style="width: 75%; margin:0 auto; text-indent: 1em;">
-        遊ぶときは、第一フェーズを始める石をクリックし、ドラッグして続きの石を選択してください。
-        ボタンを離した瞬間にいたグリッドの石が第二フェーズ終わりの石となります。
-        スマホやタブレットの場合は、第一フェーズを始める石をタップしてから、第二フェーズの支点と終点の石をタップしてください。
-        ルール違反となる手は適用されません。間違えて選択した場合は遠く離れたところでボタンを離すなどでルール違反の手を作り、キャンセルしてください。
-      </p>
+      <div id="game" style="text-align: center;">
+        <canvas id="separo-board"></canvas>
+      </div>
+      <div id="rule">
+        <p align="justify">
+          このゲームは、赤が先手、青が後手となり、順に「石」を置きながら「根」を張って、最終的に盤面をより多くの領域に分割した方が勝ちとなるゲームです。
+          ただし、分割された領域のうち、面積が格子の単位正方形1つ分以下となる領域はカウントされません。
+        </p>
+        <p align="justify">
+          手番は二つのフェーズから成ります。
+          第一フェーズでは、すでにある自分の石を選び、そこから斜めの方向にあるまだ石のない交点を選んで根を伸ばします。
+          第二フェーズでは、第一フェーズで置いた点から、第一フェーズで伸ばした線と135度の角度をなす縦横いずれかの線を選び、根を伸ばします。
+          第二フェーズで選んだ点にすでに自分の石がある場合、接続できます。
+          全てのフェーズで、すでにある自分の根と45度以下の角度で交わるような根は伸ばすことができません。
+          手がない場合、パスができます。両者ともに着手不可能になれば終了です。
+        </p>
+        <p align="justify">
+          遊ぶときは、第一フェーズを始める石をクリックし、ドラッグして続きの石を選択してください。
+          ボタンを離した瞬間にいたグリッドの石が第二フェーズ終わりの石となります。
+          スマホやタブレットの場合は、第一フェーズを始める石をタップしてから、第二フェーズの支点と終点の石をタップしてください。
+          ルール違反となる手は適用されません。間違えて選択した場合は遠く離れたところでボタンを離すなどでルール違反の手を作り、キャンセルしてください。
+        </p>
+      </div>
     </div>
     <script type="text/javascript" src="./js/index.js"></script>
     <script type="module">
