--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,7 @@
       </div>
 
       <div id="game" style="text-align: center;">
-        <canvas id="separo-board"></canvas>
+        <canvas id="separo-board" class="mw-100" style="width: 540px;"></canvas>
       </div>
       <div id="rule">
         <p align="justify">
