--- a/index.html
+++ b/index.html
@@ -65,12 +65,15 @@
         </div>
 
         <div class="row">
-          <div class="form-check col-6" style="text-align: center;">
+          <div class="form-check col-4" style="text-align: center;">
             <input type="checkbox" class="form-check-input" id="guide" checked>
             <label for="guide" class="form-check-label">Guide</label>
           </div>
-          <div class="col-6" style="text-align: center;">
+          <div class="col-4" style="text-align: center;">
             <button type="button" class="btn btn-primary" id="start-button">Start</button>
+          </div>
+          <div class="col-4" style="text-align: center;">
+            <button type="button" class="btn btn-primary" id="download-button">Download GIF</button>
           </div>
         </div>
 
